<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.krb.myawsapplication.Activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/button_encrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="19dp"
        android:text="@string/button_encrypt"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="26dp" />

    <Button
        android:id="@+id/button_decrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_encrypt"
        android:layout_alignBottom="@+id/button_encrypt"
        android:text="@string/button_decrypt"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="232dp"
        tools:layout_editor_absoluteY="26dp" />

    <TextView
        android:id="@+id/textview_encrypt"
        android:layout_width="154dp"
        android:layout_height="39dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/textview_encrypt"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="93dp" />

    <TextView
        android:id="@+id/textview_decrypt"
        android:layout_width="154dp"
        android:layout_height="39dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/textview_decrypt"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="214dp"
        tools:layout_editor_absoluteY="93dp" />

    <EditText
        android:id="@+id/edittext_enter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/edittext_enter_text"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="160dp" />


</android.support.constraint.ConstraintLayout>
